Fixes issue with card images not fitting well.

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -24,7 +24,8 @@
 .simongame-img,
 .travelboard-img,
 .wwwprovider-img {
-    height: 220px;
+    width: 100%;
+    height: 250px;
     object-fit: cover;
 }
 
